# lazypipe

./: Cargo.toml
src/: config.rs  github.rs  gitlab.rs  main.rs  poller.rs  provider.rs  state.rs  ui.rs
